# fin-table-prep

./: .gitignore  ANALYSEPROSESS.md  DOMENEKUNNSKAP.md  ENCODING_GUIDE.md  FEEDBACK_OK-BEF001.md  KODELISTER_GUIDE.md  KONTROLLSKJEMA.md  QUICK_START.md  README.md  README_ML_STRATEGI.md  README_transformer.md  REFACTOR_PLAN.md  SSB_SAS_GUIDE.md  aggregering.py  analysemetodikk.py  analyze_training_data.py  andeler.py  check_sysselsatte_ages.py  codelist_manager.py  compare_files.py  compare_names.py  compare_sysselsetting.py  debug_agg_real_data.py  debug_sysselsetting_merge.py  encoding_utils.py  excel_to_codelist.py  generate_prep_script.py  generate_prep_script_v2.py  geografiske_nivaa.json  kontrollskjema.json  px_keywords.json  pyproject.toml  temp_output.txt  test_aggregering.py  test_aggregering_modul.py  test_andeler.py  test_detect_value_cols.py  test_encoding_utils.py  test_value_cols_debug.py  tknr_to_codelist.py  (+1 more)
data/: README.md
data/OK-SYS001/: README.md  config.json
examples/: README.md  config.json  sample_data.csv
kodelister/: NAV_TKNR_til_PX.json  README.md  SSB_til_PX_geo_bydel.json  SSB_til_PX_geo_delbydel.json  SSB_til_PX_geo_grunnkrets.json  SSB_til_PX_geo_grunnkretsområde.json  SSB_til_PX_geo_kommune.json  aldgr5_til_aldgr16a.json
production_scripts/: README.md
src/: __init__.py  cli.py  core.py
src/analysis/: __init__.py  aggregation.py  column_mapping.py  value_columns.py  (+1 more)
tests/: __init__.py  test_aggregering.py  test_andeler.py  test_cli.py  test_codelist_manager.py  test_table_prep.py
training_data/: metadata_template.json
(+10 files in other folders)
